# FEA-OOP-Solver

./: README.md
scripts/: generate_regular_mesh.py  inp2mesh_dense.py  plot_4points.py  plot_600k.py  plot_600k_noclash.py  plot_compare.py  plot_extrapolated_scalability.py  plot_final_6points.py  plot_final_bar_chart.py  plot_path_comparison.py  plot_real_data_scalability_corrected.py  plot_residual.py  plot_robustness_600k.py  plot_scalability.py  plot_solver_time_comparison.py  plot_ultimate_benchmark.py  plot_ultimate_scalability.py
src/MatrixLayer/: CMakeLists.txt  MatrixBase_mod.f90  MatrixDense_mod.f90  MatrixUtilities_mod.f90  SparseCOO_mod.f90  SparseCSR_mod.f90  SparseConvert_mod.f90  SparseMatrixBase_mod.f90  SparseSkyline_mod.f90  Types.f90
src/SolverLayer/: CGSolver_mod.f90  CMakeLists.txt  LinearSolverBase_mod.f90  LinearSolverFactory_mod.f90  MKLDirectSolver_mod.f90  MKLIterativeSolver_mod.f90  PCGSolver_mod.f90  PardisoDriver_mod.f90  SkylineDirectSolver_mod.f90  SkylineLUSolverMod.f90  dasol.f90  datri.f90
src/assemble_boundary_layer/: Assembler_OOP_mod.f90  Assembler_coo.f90  BCApply_DirichletCOO_mod-fast.f90  BCApply_DirichletCSR_mod.f90  BCApply_DistributedLoad_mod.f90  BCPlan_mod.f90  BoundaryCondition_mod.f90  BoundaryLayer_mod.f90  BoundaryLayer_mod_new.f90  Boundaryconditions.f90  CMakeLists.txt  ElementBase_mod.f90  ElementIntegrator_mod.f90  Element_Hex8_mod.f90  Element_Utilities.f90  MeshIO_mod.f90  Mesh_sub.f90  ParamIO.f90  PostProcessor_mod.f90  ResultIO_mod.f90  VTK_Export_mod.f90  element_dispatch.f90  mesh_mod.f90
tests/: CMakeLists.txt  beam_memory_app.py  clean_update.py  combine_meshes.py  demo_skyline_csr.f90  draw_hex8.py  export_vtk.f90  generate_135k_mesh.py  generate_dense_regular.py  generate_mesh.py  inp2mesh.py  inp2mesh_dense.py  inp2mesh_medium.py  inp2mesh_universal.py  main_hole_400k.f90  main_hole_800k.f90  main_hole_medium_benchmark.f90  main_hole_plate_analysis.f90  main_hole_plate_benchmark.f90  main_hole_platetime_analysis.f90  main_regular_plate_analysis.f90  math_test.f90  plot_3.3.5.py  plot_geometry.py  plot_solver_time_comparison.py  test_COO_sort_and_unique.f90  test_bc_csr.f90  test_benchmark.f90  test_benchmark_cg.f90  test_benchmark_iter.f90  test_benchmark_skyline.f90  test_coo_add_entry.f90  test_coo_crs_cycle.f90  test_coo_csr_skyline.f90  test_coo_skyline_cycle.f90  test_csr_pardiso.f90  test_dense.f90  test_dense2skyline.f90  test_denseSolver.f90  test_dense_skyline.f90  (+16 more)
